# vectora-project-repo

./: README.md  try.dart
.github/workflows/: deploy-backend-lambda.yaml
ai_personal_content_app/: .gitignore  README.md  pubspec.yaml
ai_personal_content_app/android/app/: build.gradle.kts  (+2 more)
ai_personal_content_app/lib/: firebase_options.dart  get_it.dart  main.dart  objectbox-model.json  objectbox.g.dart  router.dart
ai_personal_content_app/test/: widget_test.dart
backend/: .gitignore  env.example  pyproject.toml  requirements.txt  requirements.txt.py  samconfig.toml  template.yaml
backend/src/: exceptions.py  main.py
backend/src/api/: auth_router.py  content_chat_router.py  content_operations_router.py  credits_and_quotas_router.py  payments_router.py
backend/src/core/: common.py  constants.py  logger.py  pdf_data_and_embedding_helper.py  prompts.py  secrets.py  security.py  utils.py
backend/src/models/: content_chat_model.py  credits_and_quota_model.py  notification_model.py  payment_model.py  subscriber_model.py  user_analytics_model.py  user_model.py
backend/src/repositories/: chat_vector_store_repository.py  payments_repository.py  pdf_data_and_embedding_repo.py  subscribers_repository.py  user_auth_repository.py  user_credits_and_quotas_repository.py
backend/src/schemas/: auth_schemas.py  chat_contents_schema.py  content_operations_schemas.py  credits_and_quotas_schema.py  payment_schemas.py
backend/src/services/: auth_services.py  content_chat_services.py  content_services.py  payment_services.py  user_credits_and_quotas_services.py
(+103 files in other folders)
